favoures String::formatted over static String::format